--- a/data/tasks.json
+++ b/data/tasks.json
@@ -42,9 +42,9 @@
         "reminder": "1 hora"
     },
     {
-        "title": "juani puto",
-        "date": "2020-09-27",
-        "description": "ghola",
-        "reminder": "5 min"
+        "title": "Comer Hamburguesa",
+        "date": "2020-09-24",
+        "description": "ksldja",
+        "reminder": "30 min"
     }
 ]
